@@ -32,8 +32,8 @@ LIBPNG_VER=1.2.53
 JPEG_VER=8d
 TIFF_VER=4.0.3
 GIFLIB_VER=5.0.5
-OPENSSL_VER=1.0.2a
-OPENSSL_SUBVER=1.0.2a
+OPENSSL_VER=1.0.2d
+OPENSSL_SUBVER=${OPENSSL_VER}
 
 HARFBUZZ_VER=
 FREETYPE_VER=2.5.5
