@@ -36,8 +36,8 @@ TIFF_VER=4.0.3
 # GIFLIB_VER=4.1.6
 GIFLIB_VER=5.0.5
 # OPENSSL_VER=1.0.1f
-OPENSSL_VER=1.0.2a
-OPENSSL_SUBVER=1.0.2a
+OPENSSL_VER=1.0.2d
+OPENSSL_SUBVER=${OPENSSL_VER}
 
 # HARFBUZZ_VER=0.9.27
 # FREETYPE_VER=2.5.2
